tests/snapshots/examples_fixtures/type_classes__MultiEffectTracerExample__Flow__Console.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/MultiEffectTracerExample/Flow/Console.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `MultiEffectTracerExample.Flow.Console` doesn't match file path `examples/type_classes/MultiEffectTracerExample/Flow/Console.flx`.

  examples/type_classes/MultiEffectTracerExample/Flow/Console.flx:1:1
  |
1 | module MultiEffectTracerExample.Flow.Console {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
